# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-02-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add syslog logging support

2014-02-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.3.1 (beta) released
    * Update cpg, key2value, pqueue, quickrand, reltool_util, service,
      trie, uuid after version bump and docs update
    * Fixed C/C++ CloudI API binary key/value parsing for request_info data
    * Fixed binary key/value parsing in cloudi_service_http_cowboy and
      cloudi_service_http_elli
    * Fixed cloudi_service_filesystem

2014-01-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:environment_lookup/0,
      cloudi_service:environment_transform/1, and
      cloudi_service:environment_transform/2
    * Allow the cloudi_service_filesystem directory configuration value
      to use environment variables
    * Update edoc documentation

2014-01-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the cloudi_service_api:priority() type
    * Add the service Erlang application with an autoconf commandline option
      to exclude it (for if it would cause a module name conflict)
    * Add the hello_world5 example

2014-01-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add source-address and source-port to the RequestInfo provided by
      cloudi_service_http_cowboy to provide the same format as
      cloudi_service_tcp and cloudi_service_udp
    * Add service-name to the RequestInfo provided by
      cloudi_service_http_cowboy for websocket initiated service requests

2014-01-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:source_subscriptions/2 for determining the current
      subscriptions a service request source has

2014-01-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow the cloudi_service_http_cowboy websocket_connect request
      to provide a response